# dlkinematics

./: Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml  pytest.ini  requirements_dev.txt  setup.py
.github/actions/: action-build-test-container.yml
.github/workflows/: main.yml
data/: b21.urdf  human.urdf  iis_robot.urdf  r2d2.urdf  random_chain_1.urdf  random_chain_12.urdf  random_chain_2.urdf  random_chain_24.urdf  random_chain_6.urdf  sample.urdf  simple.urdf
dlkinematics/: __init__.py  dlkinematics.py  solver.py  tf_transformations.py  training_utils.py  urdf.py
dlkinematics/evaluation/: estimate_model_params.py  evaluation_complete_without_fk.py  generate_dataset.py  ik_gradient_decent.py  ops_per_second.py
dlkinematics/urdf_parser/: urdf.py
dlkinematics/urdf_parser/xml_reflection/: core.py
docs/: minimal.py
evaluation/: estimate_model_params.py  evaluation_complete.py  generate_dataset.py
examples/: jacobian.py  model_identification.py  rotational_distance.py
tests/: helper.py  test_continuous.py  test_create_chain.py  test_dataset_generator.py  test_fixed.py  test_indices.py  test_kinematic_from_urdf.py  test_loss_functions.py  test_prismatic.py  test_revolute.py  test_transformations.py  test_urdf.py  test_with_permutations.py  transformations.py
tests/pykdl_utils/: joint_kinematics.py  kdl_kinematics.py  kdl_parser.py  pose_converter.py
tools/: urdf_generator.py  urdf_viz.py  visualise_dataset.py  visualise_ik_gradient.py
